--- a/views/components/widget-menu.jade
+++ b/views/components/widget-menu.jade
@@ -3,6 +3,9 @@ link(rel='import' href="/bower_components/polymer/polymer.html")
 link(rel="import" href="/bower_components/paper-menu/paper-menu.html")
 link(rel="import" href="/bower_components/paper-item/paper-item.html")
 link(rel="import" href="/bower_components/paper-badge/paper-badge.html")
+link(rel="import" href="/bower_components/paper-toolbar/paper-toolbar.html")
+link(rel="import" href="/bower_components/iron-icons/iron-icons.html")
+link(rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html")
 
 style.
   .with-badge {
@@ -11,6 +14,10 @@ style.
 
 dom-module(id="widget-menu")
   template
+    paper-toolbar
+      //- paper-icon-button(icon="star")
+      div
+        h2 Widgets
     paper-menu(selected="0")
       template(is="dom-repeat" items="{{_toArray(widgets)}}")
         paper-item(on-click="onClick")
