adding feedback url

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,6 +26,8 @@ html
                   a(rv-href="accountUrl")  Link
                 span  to your account for other browsers
         #widgetContent.col-xl-10
+          div(style="width:100%;text-align: center;font-size: 0.7em;") Ver 0.1.0 - Please add any feedback 
+            a(href="https://docs.google.com/document/d/1RsXUN85k7vbmU2VrBhYbr17s5elcvTPhGAEqNViqt8c/edit?usp=sharing") here.
           #loadingPage
             h1
               i(class='fa fa-refresh fa-spin' style="width:100%;text-align: center;")
