--- a/views/index.jade
+++ b/views/index.jade
@@ -21,10 +21,15 @@ html
               li.btn.list-group-item(rv-each-widget="widgets" rv-on-click="widgetMenuClicked" style="text-align: inherit;")
                 span [[widget.name]]
                 span(class="label label-default label-pill pull-right" rv-html="widget.notification")
+              li.btn.list-group-item(id="config")
+                span
+                  i.fa.fa-gears
+                span  Add/Configure widgets
               div
                 span
                   a(rv-href="accountUrl")  Link
                 span  to your account for other browsers
+            
         #widgetContent.col-xl-10
           div(style="width:100%;text-align: center;font-size: 0.7em;") Ver 0.1.0 - Please add any feedback 
             a(href="https://docs.google.com/document/d/1RsXUN85k7vbmU2VrBhYbr17s5elcvTPhGAEqNViqt8c/edit?usp=sharing") here.
