--- a/views/index.jade
+++ b/views/index.jade
@@ -61,6 +61,9 @@ html
                           option REDDIT
                           option HN
                           option XKCD
+                          option DILBERT
+                          option CANDH
+                          option TV
                       div Name
                       input.form-control(name="name")
                       button.btn(type="submit")
