--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ html
                 span  to your account for other browsers
             
         div.col-xl-10
-          div(style="width:100%;text-align: center;font-size: 0.7em;") Ver 0.1.0 - Please add any feedback 
+          div(style="width:100%;text-align: center;font-size: 0.7em;") Ver 0.1.1 - Please add any feedback 
             a(href="https://docs.google.com/document/d/1RsXUN85k7vbmU2VrBhYbr17s5elcvTPhGAEqNViqt8c/edit?usp=sharing") here.
           #widgetConfig.rvHide
             div(rv-show="displayConfig")
@@ -84,7 +84,7 @@ html
                     button.btn.btn-secondary( rv-on-click="storyClicked" style="margin-right:3px;")
                       i.fa.fa-comments
                   span.card-text 
-                    a(target="_blank" rv-href="story.url") [[story.title]]
+                    a(target="_blank" rv-href="story.url" rv-on-click="storyClicked") [[story.title]]
     script(src="/browserify/index/logic.js")
     script.
       //- var widgetMenu = document.querySelector('#widgetMenu');
