--- a/views/index.jade
+++ b/views/index.jade
@@ -21,8 +21,7 @@ html
             div.hidden
               li.btn.list-group-item(v-for="widget in widgets" v-on:click="widgetMenuClicked(widget)" style="text-align: inherit;")
                 span {{widget.name}}
-                span(class="label label-default label-pill pull-right")
-                  {{{widget.notification}}}
+                span(class="label label-default label-pill pull-right") {{{widget.notification}}}
               li.btn.list-group-item(id="config" v-on:click="configClicked()" style="text-align: inherit;")
                 span
                   i.fa.fa-gears
@@ -65,6 +64,7 @@ html
                           option DILBERT
                           option CANDH
                           option TV
+                          option TOP_SPOTIFY
                       div Name
                       input.form-control(name="name")
                       button.btn(type="submit")
