--- a/views/index.jade
+++ b/views/index.jade
@@ -1,103 +1,113 @@
 doctype html
 html
   head
-    title Website
+    title NiftyKick
     link(rel="icon" href="/public/img/favicon.ico" type="image/x-icon")
     link(rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
     link(rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css")
-    link(rel="stylesheet" href="/public/css/main.css")
+    //- link(rel="stylesheet" href="/public/css/main.css")
     //- script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
     style.
+      body {
+        font-family: Helvetica Neue,Helvetica,sans-serif;
+        //- background-color: #eaeaea;
+        color: #373a3c;
+        width: 100%;
+        
+        width: 100%;
+        position: relative;
+        max-width: 1060px;
+        margin-left:auto;margin-right:auto;
+      }
+      .menu-btn, .menu-btn:hover {
+        color: #373a3c;
+        padding: 20px
+      }
+      .display-img {
+        width: 300px; height:200px;
+      }
+      .list-card {
+        padding: 10px;
+      }
       
+      /* Shine */
+      .hover14 {
+      	position: relative;
+      }
+      .hover14::before {
+      	position: absolute;
+      	top: 0;
+      	left: -75%;
+      	z-index: 0;
+      	display: block;
+      	content: '';
+      	width: 50%;
+      	height: 100%;
+      	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+      	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+      	-webkit-transform: skewX(-25deg);
+      	transform: skewX(-25deg);
+      }
+      .hover14:hover::before {
+      	-webkit-animation: shine .75s;
+      	animation: shine .75s;
+      }
+      @-webkit-keyframes shine {
+      	100% {
+      		left: 125%;
+      	}
+      }
+      @keyframes shine {
+      	100% {
+      		left: 125%;
+      	}
+      }
   body
-    div.container-fluid(style="padding-right:0px;padding-left:0px;overflow:hidden")
-      div.row
-        #sideMenu.col-xl-2
-          ul.list-group
-            li.list-group-item.active
-              span
-                i.fa.fa-diamond
-              span  NiftyKick
-            div.hidden
-              li.btn.list-group-item(v-for="widget in widgets" v-on:click="widgetMenuClicked(widget)" style="text-align: inherit;")
-                span {{widget.name}}
-                span(class="label label-default label-pill pull-right") {{{widget.notification}}}
-              li.btn.list-group-item(id="config" v-on:click="configClicked()" style="text-align: inherit;")
-                span
-                  i.fa.fa-gears
-                span(v-if="displayConfig")  Hide Config
-                span(v-else)  Add/Configure widgets
-              div
-                span
-                  a(v-bind:href="accountUrl")  Link
-                span  to your account for other browsers
-            
-        div.col-xl-10
-          div(style="width:100%;text-align: center;font-size: 0.7em;") Ver 0.1.1 - Please add any feedback 
-            a(href="https://docs.google.com/document/d/1RsXUN85k7vbmU2VrBhYbr17s5elcvTPhGAEqNViqt8c/edit?usp=sharing") here.
-          #widgetConfig.hidden
-            div(v-if="displayConfig")
-              div.card
-                div.card-block
-                  form(v-on:submit="saveWidget($event)" id="saveForm")
-                    fieldset.form-group
-                      h4.card-title Configure Widget: {{selectedWidget.name}}
-                      div Name
-                      input.form-control(v-model="selectedWidget.name" name="name")
-                      div Settings
-                      textarea.form-control(rows="15" style="width: 100%;" v-model="selectedWidget.settingsString" name="settings")
-                      button.btn 
-                        span
-                          i.fa.fa-save
-                        span  save
-                      span(id="saveMsg")
-                  form(v-on:submit="deleteWidget($event)" id="deleteForm")
-                    button.btn 
-                      span
-                        i.fa.fa-trash
-                      span  delete
-              div.card
-                div.card-block
-                  form(v-on:submit="addWidget($event)" id="addForm")
-                    fieldset.form-group
-                      h4.card-title Add Widget
-                      div Type
-                        select.form-control(name="type")
-                          option REDDIT
-                          option HN
-                          option XKCD
-                          option DILBERT
-                          option CANDH
-                          option TV
-                          option TOP_SPOTIFY
-                      div Name
-                      input.form-control(name="name")
-                      button.btn(type="submit")
-                        span
-                          i.fa.fa-plus
-                        span  add
-                      span(id="addMsg")
-          #widgetContent
-            #loadingPage
-              h1
-                i(class='fa fa-refresh fa-spin' style="width:100%;text-align: center;")
-            div.hidden
-              div.card(v-for="story in stories")
-                div.card-block
-                  button.btn.btn-secondary(style="margin-right:3px;" v-on:click="storyClicked(story)")
-                    i.fa.fa-close
-                  a(target="_blank" v-bind:href="story.commentsUrl")
-                    button.btn.btn-secondary( v-on:click="storyClicked(story)" style="margin-right:3px;")
-                      i.fa.fa-comments
-                  span.card-text 
-                    a(target="_blank" v-bind:href="story.url" v-on:click="storyClicked(story)") {{story.title}}
-    script(src="/browserify/index/logic.js")
-    script.
-      //- var widgetMenu = document.querySelector('#widgetMenu');
-      //- widgetMenu.clickedEvent = function(id){
-      //-   alert(id)
-      //- }
-      //- widgetMenu.widgets = {
-      //-   reddit: {id:"reddit", name: "Reddit", notification: "3", type: "newsfeed"},
-      //-   hn: {id:"hn", name: "Hacker News", notification: null, type: "newsfeed"}
-      //- }
+      #top-menu
+        #title(style="text-align:center;")
+          h1(style="font-weight: bold;") NIFTYKICK 🔥 💯 	😂
+          p#quote
+        #menu(style="text-align:center;")
+          a.menu-btn(href="#home") Featured
+          a.menu-btn(href="/classic") All News
+          a.menu-btn(href="#recommend") Stuff I Recommend
+          a.menu-btn(href="#discussion") Discussion
+      #content.container-fluid(style="padding-top:20px;")
+        div.row.list-card
+          div.hover14.col-sm-4
+            img.display-img(src="/public/img/launch.png")
+          div.col-sm-8
+            h4 NIFTYKICK launch 🔥🔥🔥
+            p We did it, after 4 years of working hard at a software engineering degree I figured out how to make a website.
+        div.row.list-card
+          div.hover14.col-sm-4
+            img.display-img(src="/public/img/keyboard.png")
+          div.col-sm-8
+            h4 Under 40$: Best mechanical keyboard
+            p The Redragon K552 has exactly what is needed out of a mechanical keyboard
+  script(src="https://code.jquery.com/jquery-3.1.1.min.js")
+  script.
+        var comments = [
+          'Listen to the kids bro', 
+          'I can’t let these people play me Name one genius that ain\'t crazy',
+          'I miss the old Kanye',
+          'Turn the 6',
+          'I turn the six upside down, it\'s a nine now',
+          'My thesis will smash a stereo to pieces',
+          'Went to Burger King, they spit in my onion rings',
+          'I\'m not a \'Business-Man\'! I\'m a Business... man! Let me handle my business, damn!',
+          'Why you gotta fight with me at cheesecake',
+          'Chop the top off the Porsche, that\'s a headless horse',
+          'I\'m not out of control, I\'m just not in they control'
+        ]
+        console.log($("#quote"))
+        $("#quote").html('"'+comments[Math.floor(Math.random()*comments.length)]+'"')
+        
+        //analytics
+        ;(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-86176383-1', 'auto');
+        ga('send', 'pageview');
+        
